            - The std::string constructor and assignment operator now
              take a string by value, allowing for more efficient moves.
        Class TorusBundle:
            - Added member and global swap() functions.
        Class TreeDecomposition:
            - Added a move constructor and move/copy assignment operators.
            - Added member and global swap() functions.
            - The fromPACE() routines now return by value (not pointer),
              and throw an exception on error instead of (returning null)
        Class TreeTraversal, TreeEnumeration, TreeSingleSoln, TautEnumeration:
            - Removed the verify() routines, since this is basically just a
              single matrix multiplication.
            - Changed buildStructure() and buildSurface() to return by value,
              not by newly allocated pointer.  Now throws an exception (instead
              of returning null) if the coordinate preconditions are not met.
            - Constructors now take a NormalEncoding, not a NormalCoords, and
              will now happily accept any valid encoding.
            - The constraintsBroken() routines are gone; instead the class
              constructor throws an exception on error.
            - TreeEnumeration::run() and TautEnumeration::run() now use a
              type-safe template-based mechanism for callbacks instead of
              function pointers with void* arguments.  Moreover, the
              true/false behaviour of the callback has been inverted for
              consistency with other callback functions throughout Regina.
            - All writeTypes(), writeSurface() and writeStructure() functions
              (which are intended as drop-in callbacks) no longer have a
              void pointer argument, and now return false instead of true
              according to the new callback requirements described above.
        Class Triangulation<dim>: